# Amela-game

./: .gitignore  CMakeLists.txt  README.md  main.c  make_build.sh  map.c  menu.c
include/: both.h  collision.h  movement.h  top_lev.h
src/: both.c  collision.c  main.c  movement.c
